<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:background="#40bda4">
        
        <Button 
            android:id="@+id/btn_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:onClick="showLeftMenu"
            android:background="@drawable/btn_menu"/>
        
        <TextView 
            android:id="@+id/tv_weekly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/Weekly"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        
        <Button 
            android:id="@+id/btn_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_search"/>
        
        <Button 
            android:id="@+id/btn_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/btn_share"/>
        
    </LinearLayout>

	<ListView 
	    android:id="@+id/ll_weekly"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:padding="10dp"
	    android:dividerHeight="8dp"
	    android:background="#e3f5d6">
	</ListView>
	
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#40bda4">
        
        <Button 
            android:id="@+id/btn_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40bda4"
            android:text="@string/Today"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>
        
        <Button 
            android:id="@+id/btn_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40bda4"
            android:text="@string/Weekly"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>
        
        <Button 
            android:id="@+id/btn_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40bda4"
            android:text="@string/Discover"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>
        
    </LinearLayout>   
    
</LinearLayout>
